--- a/style.css
+++ b/style.css
@@ -5,4 +5,27 @@ html, body {
 
 canvas {
   display: block;
+  /* background: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgb(0,31,63) 100%); */
+  /* background: linear-gradient(180deg, rgb(31, 63, 191) 0%, rgb(191, 191, 191) 75%, rgb(255, 191, 63) 100%); */
+}
+
+#time {
+  position: fixed;
+  margin: auto;
+  width: 40px;
+  height: 40px;
+  left: calc(50% - 20px);
+  top: calc(50% - 20px);
+  text-align: center;
+  border: none;
+}
+
+#sun {
+  position: fixed;
+  width: 40px;
+  height: 40px;
+  left: calc(50% - 20px);
+  top: -40px;
+  border-radius: 50%;
+  background: yellow;
 }
